_generated-doc/2.7/config/quarkus-mongodb-config-group-write-concern-config.adoc
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference, cols="80,.^10,.^10"]
|===

h|[[quarkus-mongodb-config-group-write-concern-config_configuration]]link:#quarkus-mongodb-config-group-write-concern-config_configuration[Configuration property]

h|Type
h|Default

a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.safe]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.safe[quarkus.mongodb.write-concern.safe]`

[.description]
--
Configures the safety. If set to `true`: the driver ensures that all writes are acknowledged by the MongoDB server, or else throws an exception. (see also `w` and `wtimeoutMS`). If set fo 
 - `false`: the driver does not ensure that all writes are acknowledged by the MongoDB server.
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.journal]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.journal[quarkus.mongodb.write-concern.journal]`

[.description]
--
Configures the journal writing aspect. If set to `true`: the driver waits for the server to group commit to the journal file on disk. If set to `false`: the driver does not wait for the server to group commit to the journal file on disk.
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.w]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.w[quarkus.mongodb.write-concern.w]`

[.description]
--
When set, the driver adds `w: wValue` to all write commands. It requires `safe` to be `true`. The value is typically a number, but can also be the `majority` string.
--|string 
|


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.retry-writes]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.retry-writes[quarkus.mongodb.write-concern.retry-writes]`

[.description]
--
If set to `true`, the driver will retry supported write operations if they fail due to a network error.
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.w-timeout]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.write-concern.w-timeout[quarkus.mongodb.write-concern.w-timeout]`

[.description]
--
When set, the driver adds `wtimeout : ms` to all write commands. It requires `safe` to be `true`.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.safe]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.safe[quarkus.mongodb."mongo-client-configs".write-concern.safe]`

[.description]
--
Configures the safety. If set to `true`: the driver ensures that all writes are acknowledged by the MongoDB server, or else throws an exception. (see also `w` and `wtimeoutMS`). If set fo 
 - `false`: the driver does not ensure that all writes are acknowledged by the MongoDB server.
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.journal]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.journal[quarkus.mongodb."mongo-client-configs".write-concern.journal]`

[.description]
--
Configures the journal writing aspect. If set to `true`: the driver waits for the server to group commit to the journal file on disk. If set to `false`: the driver does not wait for the server to group commit to the journal file on disk.
--|boolean 
|`true`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w[quarkus.mongodb."mongo-client-configs".write-concern.w]`

[.description]
--
When set, the driver adds `w: wValue` to all write commands. It requires `safe` to be `true`. The value is typically a number, but can also be the `majority` string.
--|string 
|


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.retry-writes]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.retry-writes[quarkus.mongodb."mongo-client-configs".write-concern.retry-writes]`

[.description]
--
If set to `true`, the driver will retry supported write operations if they fail due to a network error.
--|boolean 
|`false`


a| [[quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w-timeout]]`link:#quarkus-mongodb-config-group-write-concern-config_quarkus.mongodb.-mongo-client-configs-.write-concern.w-timeout[quarkus.mongodb."mongo-client-configs".write-concern.w-timeout]`

[.description]
--
When set, the driver adds `wtimeout : ms` to all write commands. It requires `safe` to be `true`.
--|link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html[Duration]
  link:#duration-note-anchor[icon:question-circle[], title=More information about the Duration format]
|

|===
ifndef::no-duration-note[]
[NOTE]
[[duration-note-anchor]]
.About the Duration format
====
The format for durations uses the standard `java.time.Duration` format.
You can learn more about it in the link:https://docs.oracle.com/javase/8/docs/api/java/time/Duration.html#parse-java.lang.CharSequence-[Duration#parse() javadoc].

You can also provide duration values starting with a number.
In this case, if the value consists only of a number, the converter treats the value as seconds.
Otherwise, `PT` is implicitly prepended to the value to obtain a standard `java.time.Duration` format.
====
endif::no-duration-note[]
